--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <body>
     <!--Hlavička stránky-->
     <header class="hlavicka">
-      <h1>Studio I</h1>
-      <p>Kosmetika a řasy</p>
+      <h1>Iveta Beauty</h1>
+
       <p>Krásné řasy v pohodlí vašeho domova</p>
     </header>
 
@@ -35,16 +35,22 @@
       <h2>O mně</h2>
 
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, magni.
-        Dignissimos animi repellendus natus! Unde ratione voluptatum repudiandae
-        facere vitae iste exercitationem laboriosam ad distinctio, error
-        aliquid, itaque esse? Fugiat!
+        Jmenuji se Iveta a věnuji se prodlužování a zahušťování řas. Moje práce
+        je pro mě vášní – každé oči si zaslouží být krásné a jedinečné.
       </p>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur
-        reiciendis deserunt quia, ipsum iusto sed eos velit sint quasi atque
-        voluptatem reprehenderit expedita quae? Numquam eos voluptates error
-        totam corrupti.
+        Své služby poskytuji přímo u Vás doma – v prostředí, kde se cítíte
+        nejlépe a nemusíte nikam spěchat. Díky tomu si můžete užít pohodlí i
+        profesionální péči zároveň.
+      </p>
+      <p>
+        Specializuji se na umělé řasy [klasické, objemové / lash lifting / lash
+        styling – podle toho, co přesně bude dělat] a dbám na to, aby výsledek
+        působil přirozeně, elegantně
+      </p>
+      <p>
+        Těším se, až se potkáme a společně vykouzlíme pohled, který si
+        zamilujete.
       </p>
     </section>
 
