--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
         profesionální péči zároveň.
       </p>
       <p>
-        Specializuji se na umělé řasy [klasické, objemové / lash lifting / lash
-        styling – podle toho, co přesně bude dělat] a dbám na to, aby výsledek
-        působil přirozeně, elegantně
+        Specializuji se na umělé řasy..klasické, objemové / lash lifting a dbám
+        na to, aby výsledek působil přirozeně, elegantně
       </p>
       <p>
         Těším se, až se potkáme a společně vykouzlíme pohled, který si
@@ -57,12 +56,19 @@
     <!--sekce služby-->
     <section class="sluzby" id="sluzby">
       <h2>Služby</h2>
-
+      <h3>
+        Nabízím profesionální aplikaci řas přímo u Vás doma. Vyberte si styl,
+        který Vám bude nejvíce vyhovovat – od přirozeného zvýraznění po výrazný
+        objemový efekt.“
+      </h3>
+      <h3>Klasické prodloužení řas</h3>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore tenetur
-        illum accusantium! Recusandae doloremque accusamus quaerat omnis porro
-        corporis inventore? Sit mollitia officiis voluptate pariatur
-        perspiciatis possimus consectetur qui vero.
+        Řasa na řasu, přirozený vzhled, ideální pro jemné zvýraznění pohledu.
+      </p>
+      <h3>Lash lifting & botox řas</h3>
+      <p>
+        Zvýraznění a natočení vlastních řas bez prodlužování. Výsledek působí
+        velmi přirozeně a vydrží několik týdnů.
       </p>
 
       <img src="obrazky/hory1.jpg" alt="hory" />
