--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <!--Hlavička stránky-->
     <header class="hlavicka">
-      <h1>Iveta Beauty</h1>
+      <h1>Název stranky</h1>
 
       <p>Krásné řasy v pohodlí vašeho domova</p>
     </header>
@@ -123,20 +123,18 @@
     <section class="kontakt" id="kontakt">
       <h2>Kontakt</h2>
       <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim fugiat
-        praesentium voluptas consectetur fuga ab. Tempore, accusantium corrupti
-        neque fugiat quam impedit non?<a href="mailto:x@email.cz">email</a>
-        lorem, ipsum dolor sit
-        <a href="https://www.facebook.com" target="_blank">Facebooku</a>. Lorem,
-        ipsum dolor sit.....
+        Na krásné řasy nemusíte čekat – stačí mi napsat na
+        <a href="mailto:x@email.cz">email</a>, poslat zprávu na
+        <a href="https://www.facebook.com" target="_blank">Facebooku</a> nebo
+        <a href="https://www.facebook.com" target="_blank">Instagram</a>,
+        případně zavolat, a ráda přijedu až k Vám.
       </p>
 
       <h3>Oficiální kontakt</h3>
       <p>
-        Jméno a Příjmení <br />
-        Ulice <br />
-        Město <br />
-        PSČ
+        Iveta Kolářová<br />
+        Přerov<br />
+        750 02
       </p>
       <p>IČ: .............</p>
       <p>
