--- a/index.html
+++ b/index.html
@@ -12,21 +12,14 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
     <script defer src="script.js"></script>
   </head>
   <body>
     <!-- Header / Navigation -->
     <header class="site-header">
       <div class="container nav-wrap">
-        <a
-          href="#home"
-          class="logo-circle"
-          aria-label="Domů"
-          title="Logo – nahraj později"
-        >
-          <span>LOGO</span>
-        </a>
+        <a href="#home" class="logo" aria-label="Domů">LOGO</a>
         <nav class="nav" aria-label="Hlavní navigace">
           <button
             class="nav-toggle"
@@ -40,6 +33,7 @@
               viewBox="0 0 24 24"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
+              aria-hidden="true"
             >
               <path
                 d="M4 6H20M4 12H20M4 18H20"
@@ -68,7 +62,7 @@
           <h1>Lorem ipsum dolor sit amet</h1>
           <p class="lead">
             Consectetur adipiscing elit. Integer facilisis, massa eget fermentum
-            feugiat, lorem ipsum dolor sit amet.
+            feugiat, lorem ipsum dolor sit amet, consectetur adipiscing elit.
           </p>
           <div class="cta-row">
             <a class="btn" href="#kontakt">Kontaktovat</a>
@@ -97,7 +91,17 @@
           <article class="card">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non
-              risus. Suspendisse lectus tortor...
+              risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing
+              nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas
+              ligula massa, varius a, semper congue, euismod non, mi. Proin
+              porttitor, orci nec nonummy molestie, enim est eleifend mi, non
+              fermentum diam nisl sit amet erat.
+            </p>
+            <p>
+              Duis semper. Duis arcu massa, scelerisque vitae, consequat in,
+              pretium a, enim. Pellentesque congue. Ut in risus volutpat libero
+              pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas
+              leo in pede.
             </p>
           </article>
           <div class="placeholder-img"><span>Foto / banner</span></div>
@@ -106,10 +110,10 @@
     </section>
 
     <!-- Služby -->
-    <section id="sluzby" class="section">
+    <section id="sluzby" class="section" aria-labelledby="sluzby-h">
       <div class="container">
         <header class="hd">
-          <h2>Služby</h2>
+          <h2 id="sluzby-h">Služby</h2>
           <p class="muted">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit.
           </p>
@@ -117,68 +121,179 @@
         <div class="grid-3">
           <article class="card service">
             <div class="title">Lorem ipsum</div>
-            <p>Dolor sit amet...</p>
+            <p>
+              Dolor sit amet, consectetur adipiscing elit. Integer facilisis
+              massa eget fermentum feugiat.
+            </p>
           </article>
           <article class="card service">
             <div class="title">Consectetur</div>
-            <p>Aliquam tincidunt mauris eu risus...</p>
+            <p>
+              Aliquam tincidunt mauris eu risus. Vestibulum auctor dapibus
+              neque, a luctus sapien convallis vel.
+            </p>
           </article>
           <article class="card service">
             <div class="title">Adipiscing elit</div>
-            <p>Maecenas fermentum...</p>
+            <p>
+              Maecenas fermentum, sem in pharetra pellentesque, velit turpis
+              volutpat ante, in pharetra metus odio a lectus.
+            </p>
+          </article>
+          <article class="card service">
+            <div class="title">Sed non risus</div>
+            <p>
+              Curabitur euismod, nisi vel consectetur interdum, nisl nunc
+              consequat risus, in condimentum eros arcu ut tellus.
+            </p>
+          </article>
+          <article class="card service">
+            <div class="title">Vestibulum</div>
+            <p>
+              Donec sit amet eros. Lorem ipsum dolor sit amet, consectetuer
+              adipiscing elit. Mauris fermentum dictum magna.
+            </p>
+          </article>
+          <article class="card service">
+            <div class="title">Duis arcu massa</div>
+            <p>
+              Etiam cursus leo vel metus. Nulla facilisi. Aenean nec eros.
+              Vestibulum ante ipsum primis in faucibus orci luctus.
+            </p>
           </article>
         </div>
       </div>
     </section>
 
     <!-- Ceník -->
-    <section id="cenik" class="section">
+    <section id="cenik" class="section" aria-labelledby="cenik-h">
       <div class="container">
         <header class="hd">
-          <h2>Ceník</h2>
+          <h2 id="cenik-h">Ceník</h2>
           <p class="muted">Ceny jsou orientační — lorem ipsum.</p>
         </header>
         <div class="grid-3">
           <article class="card price-card">
             <h3 class="title">Lorem basic</h3>
-            <div class="price">690 Kč <small>/ služba</small></div>
+            <div class="price">690&nbsp;Kč <small>/ služba</small></div>
+            <p>Consectetur adipiscing elit. Integer facilisis massa eget.</p>
+            <a class="btn secondary" href="#kontakt">Objednat</a>
           </article>
           <article class="card price-card">
             <h3 class="title">Ipsum standard</h3>
-            <div class="price">990 Kč <small>/ služba</small></div>
+            <div class="price">990&nbsp;Kč <small>/ služba</small></div>
+            <p>Sed non risus. Suspendisse lectus tortor, dignissim sit amet.</p>
+            <a class="btn secondary" href="#kontakt">Objednat</a>
           </article>
           <article class="card price-card">
             <h3 class="title">Dolor premium</h3>
-            <div class="price">1290 Kč <small>/ služba</small></div>
+            <div class="price">1290&nbsp;Kč <small>/ služba</small></div>
+            <p>Cras elementum ultrices diam. Maecenas ligula massa.</p>
+            <a class="btn secondary" href="#kontakt">Objednat</a>
           </article>
         </div>
       </div>
     </section>
 
     <!-- Kontakt -->
-    <section id="kontakt" class="section">
+    <section id="kontakt" class="section" aria-labelledby="kontakt-h">
       <div class="container">
         <header class="hd">
-          <h2>Kontakt</h2>
-          <p class="muted">Jsme na sítích — napište jedním klikem.</p>
+          <h2 id="kontakt-h">Kontakt</h2>
+          <p class="muted">Napište pár slov – lorem ipsum.</p>
         </header>
-        <aside class="card">
-          <div class="socials">
-            <a class="icon-btn" href="#" title="Facebook">Facebook</a>
-            <a class="icon-btn" href="#" title="Instagram">Instagram</a>
-            <a
-              class="icon-btn"
-              href="mailto:lorem@ipsum.cz"
-              title="Napsat e-mail"
-              >E-mail</a
-            >
-          </div>
-        </aside>
+        <div
+          class="grid-3"
+          style="grid-template-columns: 1.2fr 0.8fr; align-items: start"
+        >
+          <form
+            class="card"
+            action="#"
+            method="post"
+            onsubmit="return false"
+            aria-label="Kontaktní formulář"
+          >
+            <div class="row">
+              <div>
+                <label
+                  for="name"
+                  class="muted"
+                  style="display: block; margin-bottom: 6px"
+                  >Jméno</label
+                >
+                <input
+                  id="name"
+                  name="name"
+                  type="text"
+                  placeholder="Lorem Ipsum"
+                  required
+                />
+              </div>
+              <div>
+                <label
+                  for="email"
+                  class="muted"
+                  style="display: block; margin-bottom: 6px"
+                  >E‑mail</label
+                >
+                <input
+                  id="email"
+                  name="email"
+                  type="email"
+                  placeholder="lorem@ipsum.cz"
+                  required
+                />
+              </div>
+            </div>
+            <div>
+              <label
+                for="msg"
+                class="muted"
+                style="display: block; margin-bottom: 6px"
+                >Zpráva</label
+              >
+              <textarea
+                id="msg"
+                name="message"
+                placeholder="Lorem ipsum dolor sit amet..."
+                required
+              ></textarea>
+            </div>
+            <div class="note">
+              Absorbuje pouze ukázková data – odešle se nikam 🙂
+            </div>
+            <div style="display: flex; gap: 10px; margin-top: 4px">
+              <button class="btn" type="submit">Odeslat</button>
+              <a class="btn secondary" href="#home">Zpět nahoru</a>
+            </div>
+          </form>
+          <aside class="card">
+            <p>
+              <strong>Lorem Studio</strong><br />Ulice 123, 123&nbsp;45 Město
+            </p>
+            <p class="muted">IČ: 01234567</p>
+            <hr
+              style="
+                border: none;
+                border-top: 1px solid rgba(0, 0, 0, 0.08);
+                margin: 12px 0;
+              "
+            />
+            <p>
+              📞 <a href="tel:+420000000000">+420 000 000 000</a><br />
+              ✉️ <a href="mailto:lorem@ipsum.cz">lorem@ipsum.cz</a><br />
+              📷 <a href="#">@instagram</a>
+            </p>
+          </aside>
+        </div>
       </div>
     </section>
 
     <footer>
-      <div class="container">© <span id="y"></span> Lorem Studio</div>
+      <div class="container">
+        © <span id="y"></span> Lorem Studio — všechna práva vyhlazená jako
+        obočí.
+      </div>
     </footer>
   </body>
 </html>
