--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Jednoduchý moderní web — pro sestru</title>
+    <title>řasy Iveta</title>
     <meta
       name="description"
       content="Jednoduchý, moderní a responzivní jednostránkový web v hnědo-krémovo-bílé paletě."
