--- a/index.html
+++ b/index.html
@@ -58,23 +58,16 @@
     <section class="hero" id="home">
       <div class="container hero-grid">
         <div class="hero-card">
-          <div class="eyebrow">Lorem ipsum</div>
-          <h1>Lorem ipsum dolor sit amet</h1>
+          <h1>Krásné řasy v pohodlí vašeho domova</h1>
           <p class="lead">
-            Consectetur adipiscing elit. Integer facilisis, massa eget fermentum
-            feugiat, lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Na krásné řasy nemusíte čekat – stačí mi napsat, případně zavolat a
+            ráda přijedu až k Vám.
           </p>
           <div class="cta-row">
             <a class="btn" href="#kontakt">Kontaktovat</a>
             <a class="btn secondary" href="#sluzby">Zobrazit služby</a>
           </div>
         </div>
-        <aside class="hero-side">
-          <div class="hero-badge"><span>Vaše foto</span></div>
-          <p class="muted" style="margin-top: 10px">
-            Zástupný obrázek — vložte vlastní.
-          </p>
-        </aside>
       </div>
     </section>
 
@@ -83,25 +76,28 @@
       <div class="container">
         <header class="hd">
           <h2>O mně</h2>
-          <p class="muted">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          </p>
         </header>
         <div class="about">
           <article class="card">
+            <div class="hero-badge"><span>Vaše foto</span></div>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non
-              risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing
-              nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas
-              ligula massa, varius a, semper congue, euismod non, mi. Proin
-              porttitor, orci nec nonummy molestie, enim est eleifend mi, non
-              fermentum diam nisl sit amet erat.
+              Jmenuji se Iveta a věnuji se prodlužování a zahušťování řas. Moje
+              práce je pro mě vášní – každé oči si zaslouží být krásné a
+              jedinečné.
             </p>
             <p>
-              Duis semper. Duis arcu massa, scelerisque vitae, consequat in,
-              pretium a, enim. Pellentesque congue. Ut in risus volutpat libero
-              pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas
-              leo in pede.
+              Své služby poskytuji přímo u Vás doma – v prostředí, kde se cítíte
+              nejlépe a nemusíte nikam spěchat. Díky tomu si můžete užít pohodlí
+              i profesionální péči zároveň.
+            </p>
+            <p>
+              Specializuji se na klasické prodlužování, objemové řasy, lash
+              lifting, podle toho, co přesně bude dělat a dbám na to, aby
+              výsledek působil přirozeně, elegantně.
+            </p>
+            <p>
+              Těším se, až se potkáme a společně vykouzlíme pohled, který si
+              zamilujete.
             </p>
           </article>
           <div class="placeholder-img"><span>Foto / banner</span></div>
@@ -114,52 +110,25 @@
       <div class="container">
         <header class="hd">
           <h2 id="sluzby-h">Služby</h2>
-          <p class="muted">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          </p>
         </header>
         <div class="grid-3">
           <article class="card service">
-            <div class="title">Lorem ipsum</div>
+            <div class="title">Klasické prodloužení řas</div>
             <p>
-              Dolor sit amet, consectetur adipiscing elit. Integer facilisis
-              massa eget fermentum feugiat.
+              Řasa na řasu, přirozený vzhled, ideální pro jemné zvýraznění
+              pohledu.
             </p>
           </article>
           <article class="card service">
-            <div class="title">Consectetur</div>
+            <div class="title">Lash lifting & botox řas</div>
             <p>
-              Aliquam tincidunt mauris eu risus. Vestibulum auctor dapibus
-              neque, a luctus sapien convallis vel.
+              Zvýraznění a natočení vlastních řas bez prodlužování. Výsledek
+              působí velmi přirozeně a vydrží několik týdnů.
             </p>
           </article>
           <article class="card service">
-            <div class="title">Adipiscing elit</div>
-            <p>
-              Maecenas fermentum, sem in pharetra pellentesque, velit turpis
-              volutpat ante, in pharetra metus odio a lectus.
-            </p>
-          </article>
-          <article class="card service">
-            <div class="title">Sed non risus</div>
-            <p>
-              Curabitur euismod, nisi vel consectetur interdum, nisl nunc
-              consequat risus, in condimentum eros arcu ut tellus.
-            </p>
-          </article>
-          <article class="card service">
-            <div class="title">Vestibulum</div>
-            <p>
-              Donec sit amet eros. Lorem ipsum dolor sit amet, consectetuer
-              adipiscing elit. Mauris fermentum dictum magna.
-            </p>
-          </article>
-          <article class="card service">
-            <div class="title">Duis arcu massa</div>
-            <p>
-              Etiam cursus leo vel metus. Nulla facilisi. Aenean nec eros.
-              Vestibulum ante ipsum primis in faucibus orci luctus.
-            </p>
+            <div class="title">Doplnění řas</div>
+            <p>Udržení krásného vzhledu každé 3–4 týdny.</p>
           </article>
         </div>
       </div>
@@ -170,26 +139,22 @@
       <div class="container">
         <header class="hd">
           <h2 id="cenik-h">Ceník</h2>
-          <p class="muted">Ceny jsou orientační — lorem ipsum.</p>
         </header>
         <div class="grid-3">
           <article class="card price-card">
-            <h3 class="title">Lorem basic</h3>
+            <h3 class="title">Klasické prodloužení řas</h3>
             <div class="price">690&nbsp;Kč <small>/ služba</small></div>
             <p>Consectetur adipiscing elit. Integer facilisis massa eget.</p>
-            <a class="btn secondary" href="#kontakt">Objednat</a>
           </article>
           <article class="card price-card">
-            <h3 class="title">Ipsum standard</h3>
+            <h3 class="title">Lash lifting & botox řas</h3>
             <div class="price">990&nbsp;Kč <small>/ služba</small></div>
             <p>Sed non risus. Suspendisse lectus tortor, dignissim sit amet.</p>
-            <a class="btn secondary" href="#kontakt">Objednat</a>
           </article>
           <article class="card price-card">
-            <h3 class="title">Dolor premium</h3>
+            <h3 class="title">Doplnění řas</h3>
             <div class="price">1290&nbsp;Kč <small>/ služba</small></div>
             <p>Cras elementum ultrices diam. Maecenas ligula massa.</p>
-            <a class="btn secondary" href="#kontakt">Objednat</a>
           </article>
         </div>
       </div>
@@ -206,67 +171,6 @@
           class="grid-3"
           style="grid-template-columns: 1.2fr 0.8fr; align-items: start"
         >
-          <form
-            class="card"
-            action="#"
-            method="post"
-            onsubmit="return false"
-            aria-label="Kontaktní formulář"
-          >
-            <div class="row">
-              <div>
-                <label
-                  for="name"
-                  class="muted"
-                  style="display: block; margin-bottom: 6px"
-                  >Jméno</label
-                >
-                <input
-                  id="name"
-                  name="name"
-                  type="text"
-                  placeholder="Lorem Ipsum"
-                  required
-                />
-              </div>
-              <div>
-                <label
-                  for="email"
-                  class="muted"
-                  style="display: block; margin-bottom: 6px"
-                  >E‑mail</label
-                >
-                <input
-                  id="email"
-                  name="email"
-                  type="email"
-                  placeholder="lorem@ipsum.cz"
-                  required
-                />
-              </div>
-            </div>
-            <div>
-              <label
-                for="msg"
-                class="muted"
-                style="display: block; margin-bottom: 6px"
-                >Zpráva</label
-              >
-              <textarea
-                id="msg"
-                name="message"
-                placeholder="Lorem ipsum dolor sit amet..."
-                required
-              ></textarea>
-            </div>
-            <div class="note">
-              Absorbuje pouze ukázková data – odešle se nikam 🙂
-            </div>
-            <div style="display: flex; gap: 10px; margin-top: 4px">
-              <button class="btn" type="submit">Odeslat</button>
-              <a class="btn secondary" href="#home">Zpět nahoru</a>
-            </div>
-          </form>
           <aside class="card">
             <p>
               <strong>Lorem Studio</strong><br />Ulice 123, 123&nbsp;45 Město
