--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>řasy Iveta</title>
-    <meta
-      name="description"
-      content="Jednoduchý, moderní a responzivní jednostránkový web v hnědo-krémovo-bílé paletě."
-    />
+    <meta name="description" content=" name="description" content="Jednoduchý,
+    moderní a responzivní jednostránkový web v hnědo-krémovo-bílé paletě." />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap"
       rel="stylesheet"
@@ -79,7 +77,10 @@
         </header>
         <div class="about">
           <article class="card">
-            <div class="hero-badge"><span>Vaše foto</span></div>
+            <div class="profile-photo">
+              <img src="foto.jpg" alt="Profilová fotografie" />
+            </div>
+
             <p>
               Jmenuji se Iveta a věnuji se prodlužování a zahušťování řas. Moje
               práce je pro mě vášní – každé oči si zaslouží být krásné a
@@ -100,7 +101,6 @@
               zamilujete.
             </p>
           </article>
-          <div class="placeholder-img"><span>Foto / banner</span></div>
         </div>
       </div>
     </section>
@@ -165,7 +165,6 @@
       <div class="container">
         <header class="hd">
           <h2 id="kontakt-h">Kontakt</h2>
-          <p class="muted">Napište pár slov – lorem ipsum.</p>
         </header>
         <div
           class="grid-3"
@@ -173,8 +172,10 @@
         >
           <aside class="card">
             <p>
-              <strong>Lorem Studio</strong><br />Ulice 123, 123&nbsp;45 Město
+              <strong>Iveta Kolářová</strong><br />
+              Přerov
             </p>
+
             <p class="muted">IČ: 01234567</p>
             <hr
               style="
@@ -186,7 +187,12 @@
             <p>
               📞 <a href="tel:+420000000000">+420 000 000 000</a><br />
               ✉️ <a href="mailto:lorem@ipsum.cz">lorem@ipsum.cz</a><br />
-              📷 <a href="#">@instagram</a>
+              📷 <a href="#">@instagram</a><br />
+              📷 <a href="#">@facebook</a>
+            </p>
+            <p>
+              Prodlužování a zahušťování řas v Přerově a okolí – napište mi
+              zprávu, e-mail nebo zavolejte a domluvíme se.
             </p>
           </aside>
         </div>
@@ -195,8 +201,7 @@
 
     <footer>
       <div class="container">
-        © <span id="y"></span> Lorem Studio — všechna práva vyhlazená jako
-        obočí.
+        © <span id="y"></span> Iveta Kolářová — všechna práva vyhrazena.
       </div>
     </footer>
   </body>
