--- a/index.html
+++ b/index.html
@@ -166,10 +166,7 @@
         <header class="hd">
           <h2 id="kontakt-h">Kontakt</h2>
         </header>
-        <div
-          class="grid-3"
-          style="grid-template-columns: 1.2fr 0.8fr; align-items: start"
-        >
+        <div class="grid-3">
           <aside class="card">
             <p>
               <strong>Iveta Kolářová</strong><br />
